force-app/main/default/objects/ampi__Project_Indicator_Objective__c/ampi__Project_Indicator_Objective__c.object-meta.xml
<CustomObject>
    <description>An objective that has been assigned to a specific project indicator</description>
    <label>Project Indicator Objective</label>
    <nameField>
        <displayFormat>PIO-{0000}</displayFormat>
        <label>Project Indicator Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Indicator Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>