force-app/main/default/objects/ampi__Project_Indicator_Objective__c/fields/ampi__Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify parent catalog objective</description>
    <label>Objective</label>
    <referenceTo>ampi__Catalog_Objective__c</referenceTo>
    <relationshipLabel>Project Indicator Objectives</relationshipLabel>
    <relationshipName>Project_Indicator_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>