force-app/main/default/objects/ampi__Project_Indicator_Objective__c/fields/ampi__Objective_Definition__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective_Definition__c</fullName>
    <description>This formula field copies the objective definition from parent objective</description>
    <formula>ampi__Objective__r.ampi__Definition_Translated__c</formula>
    <label>Objective Definition</label>
    <type>Text</type>
</CustomField>