force-app/main/default/objects/ampi__Project_Indicator_Objective__c/fields/ampi__Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify parent project indicator</description>
    <label>Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Project Indicator Objectives</relationshipLabel>
    <relationshipName>Project_Indicator_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>