force-app/main/default/objects/ampi__Project_Indicator_Objective__c/fields/ampi__xx_Framework_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Framework_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field refers to parent framework objective</description>
    <label>Framework Objective</label>
    <referenceTo>ampi__Objective__c</referenceTo>
    <relationshipLabel>Project Indicator Objectives</relationshipLabel>
    <relationshipName>Project_Indicator_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>