force-app/main/default/objects/ampi__Project_Indicator_Objective__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>